* configure.in.in, Makefile.am: Added intltool support.   * po/de.po, po/POTFILES, po/thunar-tag-renamer-plugin.pot: Updated     translation files as well as the German translations.   * thunar-tag-renamer-plugin/thunar-sbr-tag-renamer.c: Fix strings.
(Old svn revision: 1202)

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,4 +15,20 @@ rpm: dist
 	rpmbuild -ta $(PACKAGE)-$(VERSION).tar.gz
 	@rm -f $(PACKAGE)-$(VERSION).tar.gz
 
+EXTRA_DIST =								\
+	README								\
+	THANKS								\
+	AUTHORS								\
+	COPYING								\
+	NEWS								\
+	intltool-extract.in						\
+	intltool-merge.in						\
+	intltool-update.in
+
+DISTCLEANFILES = 							\
+	intltool-extract						\
+	intltool-merge							\
+	intltool-update							\
+	po/POTFILES
+
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
