--- a/configure.in.in
+++ b/configure.in.in
@@ -48,6 +48,7 @@ dnl ********************************
 AC_PROG_CC()
 AC_PROG_LD()
 AC_PROG_INSTALL()
+AC_PROG_INTLTOOL()
 
 dnl **************************
 dnl *** Initialize libtool ***
