--- a/configure.in.in
+++ b/configure.in.in
@@ -65,8 +65,8 @@ dnl ***********************************
 dnl *** Check for required packages ***
 dnl ***********************************
 XDT_CHECK_PACKAGE([EXO], [exo-0.3], [0.3.1.3])
-XDT_CHECK_PACKAGE([THUNARX], [thunarx-1], [0.2.1])
-XDT_CHECK_PACKAGE([TAGLIB], [taglib], [0.20])
+XDT_CHECK_PACKAGE([THUNARX], [thunarx-1], [0.2.3svn-r20518])
+XDT_CHECK_PACKAGE([TAGLIB], [taglib], [1.4])
 
 dnl ***********************************
 dnl *** Check for taglib_c          ***
