* thunar-tag-renamer-plugin/thunar-sbr-tag-renamer.{c,h}: Added     another naming scheme. Added "artist" and "title" properties to     the renamer class. Use a GtkTable for the layout. Added an entry     for entering a default artist (which replaces missing artist tags).     Replace "/" with "_", bug reported by Jens.
(Old svn revision: 1204)

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,10 +17,10 @@ rpm: dist
 
 EXTRA_DIST =								\
 	README								\
-	THANKS								\
 	AUTHORS								\
 	COPYING								\
 	NEWS								\
+	ChangeLog							\
 	intltool-extract.in						\
 	intltool-merge.in						\
 	intltool-update.in
