* Moved thunar-tag-renamer-plugin/ to thunar-plugin/
(Old svn revision: 1205)

--- a/configure.in.in
+++ b/configure.in.in
@@ -155,6 +155,6 @@ AC_SUBST([PLATFORM_LDFLAGS])
 AC_OUTPUT([
 Makefile
 po/Makefile.in
-thunar-tag-renamer-plugin/Makefile
+thunar-plugin/Makefile
 ])
 
