* thunar-plugin/Makefile.am,     thunar-plugin/tag-renamer-property-page.h,     thunar-plugin/tag-renamer-property-page.c,     thunar-plugin/tag-renamer-plugin.c,     thunar-plugin/tag-renamer-provider.c: Added a property page class     for editing tags in the file properties dialog. Implemented     ThunarxPropertyPageProvider in the plugin.
(Old svn revision: 1213)

--- a/thunar-plugin/Makefile.am
+++ b/thunar-plugin/Makefile.am
@@ -17,6 +17,8 @@ thunar_tag_renamer_plugin_la_SOURCES =					\
 	tag-renamer-provider.c						\
 	tag-renamer.h							\
 	tag-renamer.c							\
+	tag-renamer-property-page.h					\
+	tag-renamer-property-page.c					\
 	tag-renamer-plugin.c
 
 thunar_tag_renamer_plugin_la_CFLAGS =					\
