--- a/configure.in.in
+++ b/configure.in.in
@@ -66,6 +66,7 @@ dnl *** Check for required packages ***
 dnl ***********************************
 XDT_CHECK_PACKAGE([EXO], [exo-0.3], [0.3.1.3])
 XDT_CHECK_PACKAGE([THUNARX], [thunarx-1], [0.2.3svn-r20526])
+XDT_CHECK_PACKAGE([THUNARVFS], [thunar-vfs-1], [0.2.3svn-r20526])
 XDT_CHECK_PACKAGE([TAGLIB], [taglib], [1.4])
 
 dnl ***********************************
