* configure.in.in: Added zh_TW (traditional Chinese) to the 	  list of translations. 	* zh_TW.pl: Traditional Chinese translations by Hydonsingore 	  Cia <hydonsingore@mail.educities.edu.tw> added.
(Old svn revision: 1321)

--- a/configure.in.in
+++ b/configure.in.in
@@ -59,7 +59,7 @@ AC_PROG_LIBTOOL()
 dnl ******************************
 dnl *** Check for i18n support ***
 dnl ******************************
-XDT_I18N([de el fr hu ja pl])
+XDT_I18N([de el fr hu ja pl zh_TW])
 
 dnl ***********************************
 dnl *** Check for required packages ***
