--- a/configure.in.in
+++ b/configure.in.in
@@ -59,7 +59,7 @@ AC_PROG_LIBTOOL()
 dnl ******************************
 dnl *** Check for i18n support ***
 dnl ******************************
-XDT_I18N([de el fr hu ja pl zh_TW])
+XDT_I18N([@LINGUAS@])
 
 dnl ***********************************
 dnl *** Check for required packages ***
