--- a/configure.in.in
+++ b/configure.in.in
@@ -9,9 +9,9 @@ dnl *** Version information ***
 dnl ***************************
 m4_define([tap_version_major], [0])
 m4_define([tap_version_minor], [1])
-m4_define([tap_version_micro], [1])
+m4_define([tap_version_micro], [2])
 m4_define([tap_version_build], [r@REVISION@])
-m4_define([tap_version_tag], [svn])
+m4_define([tap_version_tag], [])
 m4_define([tap_version], [tap_version_major().tap_version_minor().tap_version_micro()ifelse(tap_version_tag(), [], [], [tap_version_tag()-tap_version_build()])])
 
 dnl *******************************************
@@ -22,7 +22,7 @@ m4_define([tap_debug_default], [ifelse(tap_version_tag(), [], [minimum], [yes])]
 dnl ***************************
 dnl *** Initialize autoconf ***
 dnl ***************************
-AC_COPYRIGHT([Copyright (c) 2006 Jannis Pohlmann <jannis@xfce.org>.])
+AC_COPYRIGHT([Copyright (c) 2006-2007 Jannis Pohlmann <jannis@xfce.org>.])
 AC_INIT([thunar-media-tags-plugin], [tap_version()], [thunar-dev@xfce.org])
 AC_PREREQ([2.50])
 AC_CANONICAL_TARGET()
