remove trailing parens on AC_INIT version info to work around bug in intltool 0.35.x and 0.36.x
(Old svn revision: 3434)

--- a/configure.in.in
+++ b/configure.in.in
@@ -23,7 +23,7 @@ dnl ***************************
 dnl *** Initialize autoconf ***
 dnl ***************************
 AC_COPYRIGHT([Copyright (c) 2006-2007 Jannis Pohlmann <jannis@xfce.org>.])
-AC_INIT([thunar-media-tags-plugin], [tap_version()], [thunar-dev@xfce.org])
+AC_INIT([thunar-media-tags-plugin], [tap_version], [thunar-dev@xfce.org])
 AC_PREREQ([2.50])
 AC_CANONICAL_TARGET()
 AC_REVISION([$Id$])
