--- a/configure.in.in
+++ b/configure.in.in
@@ -65,7 +65,7 @@ dnl ***********************************
 dnl *** Check for required packages ***
 dnl ***********************************
 XDT_CHECK_PACKAGE([EXO], [exo-0.3], [0.3.1.3])
-XDT_CHECK_PACKAGE([THUNARX], [thunarx-2], [0.2.3svn-r20526])
+XDT_CHECK_PACKAGE([THUNARX], [thunarx-2], [1.0.1])
 XDT_CHECK_PACKAGE([TAGLIB], [taglib], [1.4])
 
 dnl ***********************************
