Siwtch to exo-1 and use new tooltip api.

--- a/thunar-plugin/Makefile.am
+++ b/thunar-plugin/Makefile.am
@@ -32,6 +32,7 @@ thunar_media_tags_plugin_la_LDFLAGS =					\
 	-avoid-version							\
 	-export-dynamic							\
 	-module								\
+	$(EXO_LIBS)							\
 	$(THUNARX_LIBS)							\
 	$(TAGLIB_LIBS)							\
 	$(TAGLIBC_LIBS)							\
