--- a/configure.in.in
+++ b/configure.in.in
@@ -64,7 +64,8 @@ XDT_I18N([@LINGUAS@])
 dnl ***********************************
 dnl *** Check for required packages ***
 dnl ***********************************
-XDT_CHECK_PACKAGE([EXO], [exo-0.3], [0.3.1.3])
+XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.12.0])
+XDT_CHECK_PACKAGE([EXO], [exo-1], [0.5.0])
 XDT_CHECK_PACKAGE([THUNARX], [thunarx-2], [1.0.1])
 XDT_CHECK_PACKAGE([TAGLIB], [taglib], [1.4])
 
