Update build files and bump version to 0.2.0.

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,23 +4,19 @@ SUBDIRS =								\
 	po								\
 	thunar-plugin
 
-AUTOMAKE_OPTIONS =							\
-	1.8								\
-	dist-bzip2
-
 distclean-local:
 	rm -rf *.spec *.cache *~
 
-rpm: dist
-	rpmbuild -ta $(PACKAGE)-$(VERSION).tar.gz
-	@rm -f $(PACKAGE)-$(VERSION).tar.gz
+.PHONY: ChangeLog
+
+ChangeLog: Makefile
+	(GIT_DIR=$(top_srcdir)/.git git log > .changelog.tmp \
+	&& mv .changelog.tmp ChangeLog; rm -f .changelog.tmp) \
+	|| (touch ChangeLog; echo 'Git directory not found: installing possibly empty changelog.' >&2)
+
+dist-hook: ChangeLog
 
 EXTRA_DIST =								\
-	README								\
-	AUTHORS								\
-	COPYING								\
-	NEWS								\
-	ChangeLog							\
 	intltool-extract.in						\
 	intltool-merge.in						\
 	intltool-update.in
@@ -28,7 +24,6 @@ EXTRA_DIST =								\
 DISTCLEANFILES = 							\
 	intltool-extract						\
 	intltool-merge							\
-	intltool-update							\
-	po/POTFILES
+	intltool-update
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
