--- a/configure.in.in
+++ b/configure.in.in
@@ -12,7 +12,7 @@ m4_define([tap_version_minor], [2])
 m4_define([tap_version_micro], [0])
 m4_define([tap_version_nano],  []) dnl leave this empty to have no nano version
 m4_define([tap_version_build], [@REVISION@])
-m4_define([tap_version_tag],   [])
+m4_define([tap_version_tag],   [git])
 m4_define([tap_version], [tap_version_major().tap_version_minor().tap_version_micro()ifelse(tap_version_nano(), [], [], [.tap_version_nano()])ifelse(tap_version_tag(), [git], [tap_version_tag()-tap_version_build()], [tap_version_tag()])])
 
 dnl *******************************************
