--- a/configure.ac.in
+++ b/configure.ac.in
@@ -32,8 +32,8 @@ AC_REVISION([tap_version_build])
 dnl ***************************
 dnl *** Initialize automake ***
 dnl ***************************
-AM_CONFIG_HEADER([config.h])
-AM_INIT_AUTOMAKE([1.8 no-dist-gzip dist-bzip2 tar-ustar])
+AM_INIT_AUTOMAKE([1.8 dist-bzip2 tar-ustar no-dist-gzip])
+AC_CONFIG_HEADERS([config.h])
 AM_MAINTAINER_MODE()
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
