--- a/configure.ac.in
+++ b/configure.ac.in
@@ -7,27 +7,27 @@ dnl
 dnl ***************************
 dnl *** Version information ***
 dnl ***************************
-m4_define([tap_version_major], [0])
-m4_define([tap_version_minor], [2])
-m4_define([tap_version_micro], [0])
-m4_define([tap_version_nano],  []) dnl leave this empty to have no nano version
-m4_define([tap_version_build], [@REVISION@])
-m4_define([tap_version_tag],   [git])
-m4_define([tap_version], [tap_version_major().tap_version_minor().tap_version_micro()ifelse(tap_version_nano(), [], [], [.tap_version_nano()])ifelse(tap_version_tag(), [git], [tap_version_tag()-tap_version_build()], [tap_version_tag()])])
+m4_define([tmt_version_major], [0])
+m4_define([tmt_version_minor], [2])
+m4_define([tmt_version_micro], [1])
+m4_define([tmt_version_nano],  []) dnl leave this empty to have no nano version
+m4_define([tmt_version_build], [@REVISION@])
+m4_define([tmt_version_tag],   [])
+m4_define([tmt_version], [tmt_version_major().tmt_version_minor().tmt_version_micro()ifelse(tmt_version_nano(), [], [], [.tmt_version_nano()])ifelse(tmt_version_tag(), [git], [tmt_version_tag()-tmt_version_build()], [tmt_version_tag()])])
 
 dnl *******************************************
 dnl *** Debugging support for GIT snapshots ***
 dnl *******************************************
-m4_define([tap_debug_default], [ifelse(tap_version_tag(), [git], [yes], [minimum])])
+m4_define([tmt_debug_default], [ifelse(tmt_version_tag(), [git], [yes], [minimum])])
 
 dnl ***************************
 dnl *** Initialize autoconf ***
 dnl ***************************
 AC_COPYRIGHT([Copyright (c) 2006-2007 Jannis Pohlmann <jannis@xfce.org>.])
-AC_INIT([thunar-media-tags-plugin], [tap_version], [thunar-dev@xfce.org])
+AC_INIT([thunar-media-tags-plugin], [tmt_version], [thunar-dev@xfce.org])
 AC_PREREQ([2.50])
 AC_CANONICAL_TARGET()
-AC_REVISION([tap_version_build])
+AC_REVISION([tmt_version_build])
 
 dnl ***************************
 dnl *** Initialize automake ***
@@ -90,7 +90,7 @@ AC_SUBST([TAGLIBC_LIBS])
 dnl ***********************************
 dnl *** Check for debugging support ***
 dnl ***********************************
-XDT_FEATURE_DEBUG([tap_debug_default])
+XDT_FEATURE_DEBUG([tmt_debug_default])
 
 dnl **************************************
 dnl *** Check for linker optimizations ***
