--- a/configure.ac.in
+++ b/configure.ac.in
@@ -50,7 +50,7 @@ dnl ********************************
 AC_PROG_CC()
 AC_PROG_LD()
 AC_PROG_INSTALL()
-AC_PROG_INTLTOOL()
+IT_PROG_INTLTOOL([0.35.0])
 
 dnl **************************
 dnl *** Initialize libtool ***
