--- a/configure.ac.in
+++ b/configure.ac.in
@@ -47,7 +47,7 @@ AC_MINIX()
 dnl ********************************
 dnl *** Check for basic programs ***
 dnl ********************************
-AC_PROG_CC()
+AC_PROG_CC_C99
 AC_PROG_LD()
 AC_PROG_INSTALL()
 IT_PROG_INTLTOOL([0.35.0])
