--- a/configure.ac.in
+++ b/configure.ac.in
@@ -12,7 +12,7 @@ m4_define([tmt_version_minor], [4])
 m4_define([tmt_version_micro], [0])
 m4_define([tmt_version_nano],  []) dnl leave this empty to have no nano version
 m4_define([tmt_version_build], [@REVISION@])
-m4_define([tmt_version_tag],   [])
+m4_define([tmt_version_tag],   [git])
 m4_define([tmt_version], [tmt_version_major().tmt_version_minor().tmt_version_micro()ifelse(tmt_version_nano(), [], [], [.tmt_version_nano()])ifelse(tmt_version_tag(), [git], [tmt_version_tag()-tmt_version_build()], [tmt_version_tag()])])
 
 dnl *******************************************
