--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,14 @@ mkinstalldirs
 Makefile.in.in
 POTFILES
 m4/
+ABOUT-NLS
+config.rpath
+po/Makevars.template
+po/Rules-quot
+po/boldquot.sed
+po/en@boldquot.header
+po/en@quot.header
+po/insert-header.sin
+po/quot.sed
+po/remove-potcdate.sed
+po/remove-potcdate.sin
