--- a/configure.ac
+++ b/configure.ac
@@ -7,7 +7,7 @@ dnl
 dnl ***************************
 dnl *** Version information ***
 dnl ***************************
-XDT_VERSION_INIT([0.4.0], [git])
+XDT_VERSION_INIT([0.5.0])
 
 dnl ***************************
 dnl *** Initialize autoconf ***
