--- a/configure.ac
+++ b/configure.ac
@@ -7,7 +7,7 @@ dnl
 dnl ***************************
 dnl *** Version information ***
 dnl ***************************
-XDT_VERSION_INIT([0.5.0], [git])
+XDT_VERSION_INIT([0.6.0])
 m4_define([copyright_year], [2025])
 
 dnl ***************************
